fixing problem where cursor is hidden under wrap-guide

--- a/styles/wrap-guide.less
+++ b/styles/wrap-guide.less
@@ -4,7 +4,7 @@ atom-text-editor::shadow {
   .wrap-guide {
     height: 100%;
     width: 1px;
-    z-index: 100;
+    z-index: 3;
     position: absolute;
     top: 0;
     background-color: @syntax-wrap-guide-color;
